# chimera

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mcp.json  mcp.sample.json  mcp.schema.json  pyproject.toml  skills.json  skills.schema.json  submission.md
.cursor/: rules
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: coverage.yml  main.yml
.specify/memory/: constitution.md
ide-chat-history/: 2-5-2026.md
research/: Chimera_high_level_SRS_Doc.md  architecture_strategy.md  grading_doc.md  my_activity_logs.md
scripts/: spec_check.py  validate_mcp_config.py  validate_skills_manifest.py
scripts/db/: weaviate_migrator.py
specs/: README.md  _meta.md  backend-architecture.md  data-architecture.md  frontend-architecture.md  functional.md  mcp_configuration.md  openclaw_integration.md  skills_catalog.md  technical.md
specs/001-agentic-commerce/: data-model.md  data-model.mermaid  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-client/: plan.md  spec.md  tasks.md
specs/001-observable-mcp-swarm/: data-model.md  data-model.mermaid  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prod-stability-safety/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-skills-mcp-workflow/: plan.md  spec.md
specs/003-frontend-dashboard/: plan.md  spec.md
src/chimera/: judge.py
src/helloworld/: __init__.py  main.py
tests/: conftest.py  test_001_agentic_commerce.py  test_001_observable_mcp_swarm.py  test_001_prod_stability_safety.py  test_002_skills_mcp_workflow.py  test_judge_service.py
tests/helloworld/: test_main.py
tests/specs/: test_spec_check.py
(+72 files in other folders)
